--- a/css/style.css
+++ b/css/style.css
@@ -116,3 +116,44 @@ footer{
     justify-content: center;
     align-items: stretch;
 }
+
+/*---------------------------------------------*/
+@media only screen and (max-width: 768px) {
+    header {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .navegacao li {
+        margin: 10px;
+    }
+
+    .inicio {
+        flex-direction: column;
+    }
+
+    .inicio img {
+        margin: 20px;
+    }
+
+    .sobreMim img {
+        width: 300px;
+        height: 300px;
+    }
+
+    #sobre-mim {
+        flex-direction: column;
+    }
+
+    #html img {
+        margin: 0;
+    }
+
+    .html-css {
+        flex-direction: column;
+    }
+
+    .css {
+        width: auto;
+    }
+}
